2014-06-01  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/fit.c:  'update' fails if parameter file does not exits yet.
	Provide proper error message.
	See bugs #1385 and #1156

	config/config.nt config/config.mgw:  Sync with config.h from configure
	script.

	config/mingw/Makefile:  Use -pipe option to speed up compilation.

2014-05-27  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_readascii): Report status DF_UNDEFINED if a data
	value evaluates to the constant "NaN", just as if we calculated it on
	the fly to be e.g. 1/0.
	Bug #1408

2014-05-26  Ethan A Merritt  <merritt@u.washington.edu>

	* term/js/gnuplot_svg.js term/svg.trm:
	Grey out key entries when corresponding plot is toggled off.

	* src/graphics.c: Autoincremented user linestyle was not applied to
	histograms if the key was disabled. 
	Bugfix

2014-05-23  Ethan A Merritt  <merritt@u.washington.edu>

	* src/boundary.c:  A width adjustment for the length of the key title
	was being applied to every column of entries in the key instead of just
	once for the whole key.
	Bugfix

2014-05-11  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (f_stringcolumn): Return an empty string if asked for
	stringcolumn(N) on an empty field of a *.csv file.  Otherwise it would
	return NULL which may cause a segfault later on.
	Bugfix.

2014-05-02  Ethan A Merritt  <merritt@u.washington.edu>

	* src/gadgets.c (clip_line): It is not safe to use (A*B >= 0) as a
	substitute for the test (sign(A) != sign(B)).
	It fails when A and B are integers and their product overflows.
	Bugs #1390, #1392       See also Bug #1358

2014-04-28  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (f_timecolumn):  This function basically does not work.
	If it ever appears in a using spec slot other than 0 or 1, it will fail
	with either a segfault or a garbage return value because there is no
	no associated timefmt.  Version 5 fixes this by requiring the timefmt to